--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="My description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Springfield TV</title>
+    <title>Galaxy TV</title>
 </head>
 
 <body>
